# badlang

./: Cargo.toml  package.json  readme.md  test  test.txt
examples/: fibonacci.badlang
extension/: package-lock.json  package.json
extension/src/: extension.ts
extension/syntaxes/: badlang.tmGrammar.json
language/: Cargo.toml
language/src/: grammar.pest  lib.rs  main.rs  test.rs
language/src/lang/: analyse.rs  compile.rs  execute.rs  mod.rs
lsp/: Cargo.toml
lsp/src/: main.rs
src/: grammar.pest  main.rs  test.rs
src/lang/: mod.rs
